--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 include_directories(${TEST_SOURCE_DIR}
                     ../src
                     ../src/sparse_graph
+                    ../src/common
                     ${Boost_INCLUDE_DIRS}
                     )
 
@@ -11,9 +12,13 @@ add_library(SSTestLib test_common.cpp)
 add_executable(SS1Test test_ss1.cpp)
 target_link_libraries(SS1Test SSTestLib SokobanSolverLib ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
-add_test(NAME SS1Test COMMAND SS1Test)
+add_executable(SPQueueTest test_stable_priority_queue.cpp)
+target_link_libraries(SPQueueTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
-set_target_properties(SS1Test
+add_test(NAME SS1Test COMMAND SS1Test)
+add_test(NAME SPQueueTest COMMAND SPQueueTest)
+
+set_target_properties(SS1Test SPQueueTest
     PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/test")
 
