--- a/deadlock_generator_src/CMakeLists.txt
+++ b/deadlock_generator_src/CMakeLists.txt
@@ -1,6 +1,6 @@
-file(GLOB WOS_SRC "*.cpp")
-list(REMOVE_ITEM WOS_SRC "main.cpp")
+file(GLOB SRC "*.cpp")
+list(REMOVE_ITEM SRC "main.cpp")
 
-add_executable(DeadlockGenerator main.cpp)
-target_include_directories(DeadlockGenerator PUBLIC ../src)
-target_link_libraries(DeadlockGenerator SokobanSolverLib)
+add_executable(DeadlockGenerator ${SRC} main.cpp)
+target_include_directories(DeadlockGenerator PUBLIC ../src ../src/deadlocks)
+target_link_libraries(DeadlockGenerator SokobanSolverLib SokobanDeadlockLib)
