updated, added testing generated deadlocks

--- a/deadlock_generator_src/CMakeLists.txt
+++ b/deadlock_generator_src/CMakeLists.txt
@@ -3,4 +3,4 @@ list(REMOVE_ITEM SRC "main.cpp")
 
 add_executable(DeadlockGenerator ${SRC} main.cpp)
 target_include_directories(DeadlockGenerator PUBLIC ../src ../src/deadlocks)
-target_link_libraries(DeadlockGenerator SokobanSolverLib SokobanDeadlockLib)
+target_link_libraries(DeadlockGenerator SokobanSolverLib)
